# pas-rs

./: .cz.toml  .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  docker-compose.yml
.github/workflows/: deploy.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20231228143859_init.down.sql  20231228143859_init.up.sql
backend/src/: lib.rs  main.rs
backend/src/endpoints/: init.rs  mod.rs  produced_good.rs  user.rs
backend/src/endpoints/produced_goods/: analitic.rs  produced_good.rs
backend/src/endpoints/rbs/: measure.rs  product.rs
backend/src/endpoints/users/: organization.rs  user.rs
backend/src/services/: init.rs  mod.rs  produced_good.rs  user.rs
backend/src/services/produced_goods/: analitic.rs  mod.rs  produced_good.rs
backend/src/services/rbs/: measure.rs  mod.rs  product.rs
backend/src/services/users/: organization.rs  user.rs
frontend/: Cargo.toml  Trunk.toml  build.rs  index.html  package-lock.json  tailwind.config.js
frontend/assets/: main.css
frontend/assets/css/: tailwind.css
frontend/src/: lib.rs  main.rs
frontend/src/components/: auth.rs  footer.rs  mod.rs  not_found.rs
frontend/src/components/analitic/: component.rs  list.rs  mod.rs
frontend/src/components/elements/: error.rs  input.rs  loader.rs  mod.rs  modal.rs  multiselect.rs  paginate.rs  select.rs
frontend/src/components/header/: component.rs  mod.rs  modal.rs
frontend/src/components/home/: component.rs  list.rs  mod.rs  modal.rs
frontend/src/components/organization/: component.rs  list.rs  mod.rs  modal.rs
frontend/src/components/rbs/measure/: component.rs  list.rs  mod.rs  modal.rs
frontend/src/components/rbs/product/: component.rs  list.rs  mod.rs  modal.rs
frontend/src/components/user/: component.rs  list.rs  mod.rs  modal.rs
