[workspace]
members = [
    "backend",
    "frontend",
]

resolver = "2"

[workspace.package]
# name = "pas"
description = "Система учета производства (Production Accounting System)"
version = "0.3.0"
edition = "2021"
authors = ["Alexandr Starovoitov <stalex.info@yandex.ru>"]


[workspace.dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
log = { version = "0.4.20", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"


[profile.dev]
split-debuginfo = "unpacked"
debug = "limited"


[profile.release]
debug = "limited"
lto = "thin"
codegen-units = 1
