[package]
name = "backend"
description = "Бекенд для (Production Accounting System)"
edition.workspace = true
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["multipart"] }
bcrypt = "0.15.0"
dotenv = "0.15.0"
env_logger = "0.10.1"
features = "0.10.0"
rust_xlsxwriter = { version = "0.61.0", features = ["chrono", "serde"] }
sqlx = { version = "0.7.3", features = ["uuid", "chrono", "runtime-tokio-rustls", "postgres", "migrate", "json", "any"] }
sqlx-cli = "0.7.3"
tempfile = "3.9.0"
thiserror = "1.0.50"
tokio = { version = "1.35.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.5.0", features = ["cors", "trace", "compression-gzip"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }

anyhow.workspace = true
chrono.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
