[package]
name = "frontend"
description = "Фронтенд для (Production Accounting System)"
edition.workspace = true
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.7"
chrono = { version = "0.4.31", features = ["serde"] }
gloo = "0.10.0"
gloo-net = "0.4.0"
js-sys = "0.3.67"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.65", features = ["css", "HtmlInputElement", "Window", "HtmlSelectElement", "HtmlOptionElement", "HtmlAnchorElement", "Blob", "Url"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
