[package]
name = "frontend"
description = "Фронтенд для (Production Accounting System)"
edition.workspace = true
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
gloo = "0.10.0"
js-sys = "0.3.67"
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.65", features = ["css", "HtmlInputElement", "Window", "HtmlSelectElement", "HtmlOptionElement", "HtmlAnchorElement", "Blob", "Url"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"

anyhow.workspace = true
chrono.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
